# routes/api/auth.js
@@ -10,4 +10,6 @@ router.post("/register", validateBody(schemas.joiRegisterSchema), ctrl.register)
 
 router.post("/login", validateBody(schemas.joiLoginSchema), ctrl.login);
 
+router.post("/logout", authenticate, ctrl.logout);
+
 module.exports = router;
